--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,6 @@
 <br>
 <center>
     <h1>500 Internal Server Error</h1>
+    <p>Something went wrong</p>
     <p>Page not found. Try again...</p>
 </center>
